frontend/test/should_pass/exectype_SetmapAddUntyped2.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<int>=set<int>{} && u:map<int,A>=map<int,A>{} && x.add(y) && u.add(v,w));
	}
}