frontend/test/should_fail/exectype_SetmapAdd5.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<HH> =set<HH> && y:H=varia && x.add(y));
	}
}